[EATON-495] Highlights - Highlight label formatting issue

--- a/eaton.frontend/src/components/icon-list/css/views/_view-no-image-highlights.scss
+++ b/eaton.frontend/src/components/icon-list/css/views/_view-no-image-highlights.scss
@@ -21,6 +21,8 @@
 
   &__text {
     word-wrap: break-word;
+    color: $color__primary-gray1;
+    font-family: 'EatonMedium';
   }
 
   &__symbol {
