--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/icon-list/css/icon-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/icon-list/css/icon-list.css
@@ -47,7 +47,7 @@
 
 .icon-list-no-image-highlights__title { text-transform: uppercase; font-weight: bold; color: #5B6770; }
 
-.icon-list-no-image-highlights__text { word-wrap: break-word; }
+.icon-list-no-image-highlights__text { word-wrap: break-word; color: #333F48; font-family: 'EatonMedium'; }
 
 .icon-list-no-image-highlights__symbol { position: relative; }
 
