[EATON-496] Highlights - label/text formatting issue

--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/icon-list/css/icon-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/icon-list/css/icon-list.css
@@ -45,7 +45,7 @@
 
 .icon-list-no-image-highlights__content { text-align: center; }
 
-.icon-list-no-image-highlights__title { text-transform: uppercase; font-weight: bold; color: #5B6770; }
+.icon-list-no-image-highlights__title { text-transform: uppercase; font-weight: bold; color: #333F48; }
 
 .icon-list-no-image-highlights__text { word-wrap: break-word; color: #333F48; font-family: 'EatonMedium'; }
 
