--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/list/css/list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/list/css/list.css
@@ -187,7 +187,7 @@
   .listdefault__content { padding: 15px 15px 0 15px; width: 100%; } }
 
 @media screen and (min-width: 768px) and (max-width: 991px) { .listdefault__slides { display: block; }
-  .listdefault__card { margin-bottom: 20px; }
+  .listdefault__card { margin-bottom: 20px; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; }
   .listdefault__image { width: 50%; }
   .listdefault__content { padding: 30px 15px 15px 30px; width: 50%; } }
 
