--- a/eaton.frontend/src/components/ttil-list/css/views/_view-featured-list.scss
+++ b/eaton.frontend/src/components/ttil-list/css/views/_view-featured-list.scss
@@ -34,7 +34,10 @@
   }
 
   &__image {
-    max-width: 300px;
+    width: 167px;
+    min-width: 167px;
+    height: 167px;
+    display: block;
   }
 
   &__body {
