M-33 refactor - JS fix for 2 and 3 items on list and bug fixes

--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/list/css/list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/list/css/list.css
@@ -180,6 +180,8 @@
 
 .listdefault__card .category-item-date { color: #98A4AE; }
 
+.listdefault__card .rendition img { width: 100%; }
+
 .listdefault__content { padding: 30px 30px 15px 30px; }
 
 @media screen and (max-width: 767px) { .listdefault__slides { display: block; }
