--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-default.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-default.html
@@ -14,7 +14,7 @@
 
     <div class="row">
 
-        <ul class="listdefault__slides" data-sly-list.slider="${data.cards}">
+        <ul class="listdefault__slides ${data.cards.length == 2 ? 'js-col6' : 'js-col4'}" data-sly-list.slider="${data.cards}">
             <li class="slides col-sm-12 ${data.cards.length == 2 ? 'col-md-6' : 'col-md-4'}">
                <a href="${slider.cta.url}" target="${slider.cta.target}" class="listdefault__link">
 
