--- a/eaton.frontend/src/components/icon-list/css/views/_view-proof-points.scss
+++ b/eaton.frontend/src/components/icon-list/css/views/_view-proof-points.scss
@@ -3,7 +3,7 @@
 //-----------------------------------
 
 .icon-list-proof-points {
-  padding: ($spacing__lg / 2) 0;
+  margin: $spacing__lg 0;
 
   &__item {
     display: flex;
