--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/icon-list/css/icon-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/icon-list/css/icon-list.css
@@ -11,7 +11,7 @@
  */
 
 
-.icon-list-proof-points { padding: 45px 0; }
+.icon-list-proof-points { margin: 90px 0; }
 
 .icon-list-proof-points__item { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; }
 
