--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil/css/ttil.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil/css/ttil.css
@@ -47,8 +47,6 @@
 
 .dark-theme .eaton-single-feature__item { color: #FFF; }
 
-.feature-block-component { margin: 60px 0; }
-
 .feature-block-component__image { text-align: center; position: relative; min-height: 92.6666vw; }
 
 @media screen and (min-width: 768px) and (max-width: 991px) { .feature-block-component__image { min-height: 60vw; min-width: 48vw; } }
@@ -99,7 +97,7 @@
   .eaton-article-feature__body { margin-bottom: 8px; }
   .eaton-article-feature__cta { font-size: 2.8rem; line-height: 3.2rem; margin-top: 5px; margin-bottom: 5px; } }
 
-.eaton-page-overview { padding: 60px 0; }
+.eaton-page-overview { margin-top: 120px; margin-bottom: 60px; }
 
 .eaton-page-overview__title { position: relative; }
 
@@ -110,8 +108,7 @@
   .eaton-page-overview__cta--mobile { display: block; }
   .eaton-page-overview__cta--desktop { display: none; } }
 
-@media screen and (min-width: 992px) { .eaton-page-overview { padding: 120px 0; }
-  .eaton-page-overview__title { padding-bottom: 50px; }
+@media screen and (min-width: 992px) { .eaton-page-overview__title { padding-bottom: 50px; }
   .eaton-page-overview__cta { margin-top: 60px; }
   .eaton-page-overview__cta--mobile { display: none; }
   .eaton-page-overview__cta--desktop { display: block; } }
