--- a/eaton.frontend/src/components/list/css/views/_view-article-list-single-feature.scss
+++ b/eaton.frontend/src/components/list/css/views/_view-article-list-single-feature.scss
@@ -1,16 +1,7 @@
 .article-list-single-feature {
 
-  padding-bottom: 30px;
-  padding-top: 25px;
-
-  @include media-mobile-only {
-    padding-bottom: 0;
-  }
-
-  @include media-tablet-and-up {
-    padding-bottom: 60px;
-    padding-top: 50px;
-  }
+  margin-bottom: 60px;
+  margin-top: 50px;
 
   &--border {
     border-top: 4px solid;
