--- a/eaton.frontend/src/components/list/css/views/_view-article-list-single-feature.scss
+++ b/eaton.frontend/src/components/list/css/views/_view-article-list-single-feature.scss
@@ -1,6 +1,5 @@
 .article-list-single-feature {
 
-  margin-bottom: 60px;
   margin-top: 50px;
 
   &--border {
@@ -31,6 +30,10 @@
   &__cta {
     display: flex;
     justify-content: center;
+  }
+
+  img {
+    width: 100%;
   }
 }
 
