--- a/eaton.frontend/src/components/search-box/css/views/_view-default.scss
+++ b/eaton.frontend/src/components/search-box/css/views/_view-default.scss
@@ -23,6 +23,7 @@
     color: $color__white;
     background: transparent;
     padding: 0;
+    resize:none;
 
     &:focus {
       //-----------------------------------
