--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/footer/css/footer.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/footer/css/footer.css
@@ -47,6 +47,6 @@
 
 @media screen and (min-width: 992px) { .eaton-footer-top__logo { margin-bottom: 30px; }
   .eaton-footer-bottom { padding: 40px 0; }
-  .eaton-footer-bottom__link-list { float: left; }
-  .eaton-footer-bottom__copyright { float: right; }
   .eaton-footer-top .eaton-footer-top__link-list a { font-size: 18px; line-height: 26px; } }
+  .eaton-footer-bottom__link-list { float: left; width: 68%; }
+  .eaton-footer-bottom__copyright { float: right; } }
