--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil/views/view-single-feature.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil/views/view-single-feature.html
@@ -2,7 +2,9 @@
   <div class="eaton-single-feature">
     <p class="eaton-single-feature__headline b-eyebrow-small">${data.title}</p>
     <div class="eaton-single-feature__image">
-      <img class="img-responsive" src="${data.imgSrc}" alt=${data.title} />
+      <sly data-sly-use.tpl="eaton/static-components/shared/templates/rendition-image.html">
+        <sly data-sly-call="${ tpl.module @ data=data.image }"></sly>
+      </sly>
     </div>
     <div class="eaton-single-feature__content">
       <!--/* Eyebrow */-->
