--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-featured-article.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-featured-article.html
@@ -9,61 +9,52 @@
                 <div class="featured-category-container">
                     <a href="${data.single_feature_card.cta.url}" target="${data.single_feature_card.cta.target}">
                         <img src="${data.single_feature_card.image}" class="hidden-xs img-responsive category__image" alt="${data.single_feature_card.image_alt}"/>
-                        <img src="${data.single_feature_card.mobile_image}" class="visible-xs img-responsive category__image" alt="${data.single_feature_card.image_alt}"/> 
+                        <img src="${data.single_feature_card.mobile_image}" class="visible-xs img-responsive category__image" alt="${data.single_feature_card.image_alt}"/>
                         <div class="featured-category--topbottompadding">
                             <div class="b-eyebrow-large category__title--bottompadding">${data.single_feature_card.title}</div>
                             <div class="featured-category__title">${data.single_feature_card.text}</div>
                             <div class="category-item-date category-item-date--gray2 b-body-copy-small"><em>${data.single_feature_card.date_text}</em></div>
-                        </div>                    
-                    </a>
-                </div>
-            </div>
-        </div>
-
-        <!--/* Desktop/Tablet Layout */-->
-        <div class="row hidden-xs visible-sm visible-md visible-lg">
-            <div data-sly-list.slider="${data.cards}" role="listbox">
-                <div class="col-sm-12 ${data.cards.length == 2 ? 'col-md-6' : 'col-md-4'}">
-                    <a href="${slider.cta.url}" class="equal-height-row tablet-card" target="${slider.cta.target}">
-                        <div class="related-category--tablet-left">
-                            <img src="${slider.image}" class="img-responsive category__image" alt="${slider.image_alt}"/>
-                        </div>
-                        <div class="category__item--border category__item-innerpadding related-category--tablet-right category__item">
-                            <div class="b-eyebrow-small category__title--bottompadding">${slider.title}</div>
-                            <div class="b-heading-h5">${slider.text}</div>
-                            <p class="category-item-date category-item-date--gray2 b-body-copy-small"><em>${slider.date_text}</em></p>
                         </div>
                     </a>
                 </div>
             </div>
         </div>
 
-        <!--/* Mobile slider */-->
-        <div class="row visible-xs">
-            <div class="col-xs-12">
-                <div class="featured-article-carousel-component carousel slide">
-                    <div class="carousel-inner" data-sly-list.slider="${data.cards}" role="listbox">
-                        <a href="${slider.cta.url}" class="item ${sliderList.index == 0 ? 'active' : ''}" target="${slider.cta.target}">
-                            <div>
-                                <img src="${slider.mobile_image}" class="img-responsive category__image" alt="${slider.image_alt}"/>
-                                <div class="category__item--border category__item-innerpadding carousel__item">
-                                    <div class="b-eyebrow-small category__title--bottompadding">${slider.title}</div>
-                                    <h5 class="b-heading-h5">${slider.text}</h5>
-                                    <p class="b-body-copy-small category-item-date category-item-date--gray2"><em>${slider.date_text}</em></p>
+
+            <div class="row">
+
+                <ul class="listdefault__slides ${data.cards.length == 2 ? 'js-col6' : 'js-col4'}" data-sly-list.slider="${data.cards}">
+                    <li class="slides col-sm-12 ${data.cards.length == 2 ? 'col-md-6' : 'col-md-4'}">
+                       <a href="${slider.cta.url}" target="${slider.cta.target}" class="listdefault__link">
+
+                                <div class="listdefault__card">
+
+                                  <div class="listdefault__image">
+                                  <!-- Start: Rendition Image Component -->
+                                  <sly data-sly-use.tpl="eaton/static-components/shared/templates/rendition-image.html">
+                                    <sly data-sly-call="${ tpl.module @ data=slider.image }"></sly>
+                                  </sly>
+                                  <!-- End: Rendition Image Component -->
+                                  </div><div class="listdefault__content">
+                                        <p class="b-eyebrow-small">${slider.title}</p>
+                                        <p class="b-heading-h5">${slider.text}</p>
+                                        <p class="category-item-date"><em>${slider.date_text}</em></p>
+                                    </div>
                                 </div>
-                            </div>
                         </a>
-                    </div>
-                    <div class="text-center">
-                        <ol class="carousel-indicators list-unstyled" data-sly-list.slider1="${data.cards}">
-                            <li data-target=".featured-article-carousel-component" data-slide-to="${slider1List.index}" class="${slider1List.index == 0 ? 'active' : ''}">
-                                <span class="sr-only">${slider1List.index}</span>
-                            </li>
-                        </ol>
-                    </div>
-                </div>
+                    </li>
+                </ul>
+
+                    <button class="listdefault__prev-arrow upsell-products__arrows button--reset">
+                        <i class="icon icon-chevron-left"></i>
+                        <span class="sr-only">Go to Previous Item</span>
+                    </button>
+                    <button class="listdefault__next-arrow upsell-products__arrows button--reset">
+                        <i class="icon icon-chevron-right"></i>
+                        <span class="sr-only">Go to Next Item</span>
+                    </button>
             </div>
-        </div>
+
 
         <!--/* Bottom CTA */-->
         <div class="row">
