[EATON-332 Next Steps] Update Eyebrow size to be `b-eyebrow-large` by default

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/link-list/views/view-vertical.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/link-list/views/view-vertical.html
@@ -4,7 +4,7 @@
 
     <!--/* If Eyebrow */-->
     <div data-sly-test="${ data.view.eyebrow }"
-      class="eaton-link-list-vertical__eyebrow b-eyebrow-small">${ data.view.eyebrow }</div>
+      class="eaton-link-list-vertical__eyebrow b-eyebrow-large">${ data.view.eyebrow }</div>
 
     <!--/* List Links */-->
     <ul data-sly-list="${ data.view.links }"
