[EATON-332 Next Steps] Update Font sizes to be `body-copy` by default

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/link-list/views/view-vertical.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/link-list/views/view-vertical.html
@@ -9,7 +9,7 @@
     <!--/* List Links */-->
     <ul data-sly-list="${ data.view.links }"
       class="eaton-link-list-vertical__list">
-      <li class="eaton-link-list-vertical__list-item b-body-copy-small">
+      <li class="eaton-link-list-vertical__list-item b-body-copy">
         <a href="${item.document_download ? item.document_download : item.url}"
           aria-label="Go to ${ item.title }"
           class="eaton-link-list-vertical__list-link"
