--- a/eaton.frontend/src/components/link-list/css/views/_view-vertical.scss
+++ b/eaton.frontend/src/components/link-list/css/views/_view-vertical.scss
@@ -41,28 +41,24 @@
     list-style-type: none;
   }
 
-  &__list-item {
-
-  }
-
   &__list-link {
     display: inline-block;
     padding: ($spacing__sm / 3) 0; // Visually 30px Spacing between items
   }
 
   &__list-icon {
-    font-size: 1.4rem;
+    font-size: 1.4rem; //TODO
   }
 
   &__external-icon {
     padding-right: 10px;
-    font-size: 1.5rem;
+    font-size: 1.5rem; //TODO
   }
 
   &__download-text {
     width: 100%;
     margin-left: 30px;
-    font-size: 1.6rem;
+    font-size: 1.6rem; //TODO
 
     &--description {
       color: $color__primary-gray3;
@@ -79,14 +75,31 @@
       display: inline-block;
     }
 
+    &__eyebrow {
+      @include eyebrow-small;
+    }
+
+    // Override font-sizes for dark-theme
+    &__list-item {
+      @include body-copy-small;
+    }
+
     &__eyebrow,
-    &__list-link,
+    &__list-item a, // Override style added by the mixins
     &__download-text {
       color: $color__white;
     }
 
-    &__eyebrow {
-      @include eyebrow-small;
+    &__list-icon {
+      font-size: 1.4rem;
+    }
+
+    &__external-icon {
+      font-size: 1.5rem;
+    }
+
+    &__download-text {
+      font-size: 1.6rem;
     }
   }
 
