--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil-list/views/view-image-only.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil-list/views/view-image-only.html
@@ -5,19 +5,25 @@
         <div class="eaton-ttil-image-list__item">
             <!--/* When Image has Headline & No Url */-->
             <div data-sly-test="${!item.url && item.headline}" class="eaton-ttil-image-list__content">
-              <img src="${item.image}" class="img-responsive eaton-ttil-image-list__image" />
+              <div class="eaton-ttil-image-list__image">
+                <img src="${item.image}" class="img-responsive" />
+              </div>
               <div class="img-responsive eaton-ttil-image-list__image-headline">${item.headline}</div>
             </div>
 
             <!--/* When Image has Headline & Url */-->
             <a data-sly-test="${item.url && item.headline}" href="${item.url}" class="eaton-ttil-image-list__content">
-              <img src="${item.image}" class="img-responsive eaton-ttil-image-list__image" />
-              <div class="img-responsive eaton-ttil-image-list__image-headline">${item.headline}</div>
+              <div class="eaton-ttil-image-list__image">
+                <img src="${item.image}" class="img-responsive" />
+              </div>
+              <div class="eaton-ttil-image-list__image-headline">${item.headline}</div>
             </a>
 
             <!--/* When Image has no Headline */-->
             <div data-sly-test="${!item.headline}" class="eaton-ttil-image-list__content">
-              <img src="${item.image}" class="img-responsive eaton-ttil-image-list__image" />
+              <div class="eaton-ttil-image-list__image">
+                <img src="${item.image}" class="img-responsive" />
+              </div>
             </div>
         </div>
       </div>
