--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
@@ -172,7 +172,9 @@
 
 .eaton-ttil-image-list__item { padding: 0 10px; }
 
-.eaton-ttil-image-list__content { display: block; }
+.eaton-ttil-image-list__content { display: block; text-align: center; }
+
+.eaton-ttil-image-list__image img { display: inline-block; }
 
 .eaton-ttil-image-list__image-headline { margin-top: 30px; color: #005EB8; font-weight: bold; }
 
@@ -180,7 +182,7 @@
   .eaton-ttil-image-list__item { -webkit-flex-basis: 100%; -ms-flex-preferred-size: 100%; flex-basis: 100%; padding: 0 10px; margin-bottom: 30px; }
   .eaton-ttil-image-list__item:last-child { margin-bottom: 0; }
   .eaton-ttil-image-list__content { text-align: center; }
-  .eaton-ttil-image-list__image { width: 150px; display: inline-block; } }
+  .eaton-ttil-image-list__image { max-width: 480px; min-width: 250px; } }
 
 @media screen and (min-width: 992px) { .eaton-ttil-image-list__container { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-flex-wrap: wrap; -ms-flex-wrap: wrap; flex-wrap: wrap; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; }
   .eaton-ttil-image-list__item { -webkit-flex-basis: 31%; -ms-flex-preferred-size: 31%; flex-basis: 31%; margin-bottom: 60px; }
