EATON-332: restyled the link list vertical component

--- a/eaton.frontend/src/global/css/base/elements/_rich-text.scss
+++ b/eaton.frontend/src/global/css/base/elements/_rich-text.scss
@@ -18,8 +18,10 @@
 
   // wysiwyng classes
   span.b-eyebrow-large {
-    padding-bottom: 25px;
+    padding-bottom: 20px;
     display: inline-block;
+    top: -5px;
+    position: relative;
   }
 
   // stylelint-disable selector-max-compound-selectors
