--- a/eaton.frontend/src/components/link-list/css/views/_view-vertical.scss
+++ b/eaton.frontend/src/components/link-list/css/views/_view-vertical.scss
@@ -41,28 +41,46 @@
     list-style-type: none;
   }
 
+  &__list-text {
+    display: inline-flex;
+  }
+
   &__list-link {
     display: inline-block;
     padding: ($spacing__sm / 3) 0; // Visually 30px Spacing between items
   }
 
   &__list-icon {
-    font-size: 1.4rem; //TODO
+    padding-right: 10px;
+    font-size: 2.8rem;
+    padding-top: 5px;
   }
 
   &__external-icon {
     padding-right: 10px;
-    font-size: 1.5rem; //TODO
+    font-size: 2.8rem;
+    margin-top: 8px;
+
+    &.icon-link-external {
+      margin-top: 0;
+      top: 2px;
+      position: relative;
+    }
   }
 
   &__download-text {
     width: 100%;
-    margin-left: 30px;
-    font-size: 1.6rem; //TODO
+    margin-left: 40px;
+    font-size: 1.8rem;
+    margin-top: -10px;
 
     &--description {
       color: $color__primary-gray3;
       font-family: $font-family__secondary;
+    }
+
+    p {
+      margin: 0 0 5px;
     }
   }
 
