--- a/eaton.frontend/src/components/ttil-list/css/views/_view-image-only.scss
+++ b/eaton.frontend/src/components/ttil-list/css/views/_view-image-only.scss
@@ -3,7 +3,8 @@
 //-----------------------------------
 
 .eaton-ttil-image-list {
-
+  margin: 30px 0;
+  
   &__item {
     padding: 0 10px;
 
@@ -16,6 +17,7 @@
 
   &__image img {
     display: inline-block;
+    width: 100%;
   }
 
   &__image-headline {
@@ -49,6 +51,7 @@
     &__image {
       max-width: 480px;
       min-width: 250px;
+      margin: 0 auto;
     }
   }
 
@@ -63,7 +66,7 @@
     }
 
     &__item {
-      flex-basis: 31%;
+      flex-basis: 33.33%;
       margin-bottom: ($spacing__sm * 2);
 
       // Only 2 images should display when used in two column grid
