--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil-list/views/view-image-only.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil-list/views/view-image-only.html
@@ -6,7 +6,9 @@
             <!--/* When Image has Headline & No Url */-->
             <div data-sly-test="${!item.url && item.headline}" class="eaton-ttil-image-list__content">
               <div class="eaton-ttil-image-list__image">
-                <img src="${item.image}" class="img-responsive" />
+                <sly data-sly-use.tpl="eaton/static-components/shared/templates/rendition-image.html">
+                  <sly data-sly-call="${ tpl.module @ data=item.image }"></sly>
+                </sly>
               </div>
               <div class="img-responsive eaton-ttil-image-list__image-headline">${item.headline}</div>
             </div>
@@ -14,7 +16,9 @@
             <!--/* When Image has Headline & Url */-->
             <a data-sly-test="${item.url && item.headline}" href="${item.url}" class="eaton-ttil-image-list__content">
               <div class="eaton-ttil-image-list__image">
-                <img src="${item.image}" class="img-responsive" />
+                <sly data-sly-use.tpl="eaton/static-components/shared/templates/rendition-image.html">
+                  <sly data-sly-call="${ tpl.module @ data=item.image }"></sly>
+                </sly>
               </div>
               <div class="eaton-ttil-image-list__image-headline">${item.headline}</div>
             </a>
@@ -22,7 +26,9 @@
             <!--/* When Image has no Headline */-->
             <div data-sly-test="${!item.headline}" class="eaton-ttil-image-list__content">
               <div class="eaton-ttil-image-list__image">
-                <img src="${item.image}" class="img-responsive" />
+                <sly data-sly-use.tpl="eaton/static-components/shared/templates/rendition-image.html">
+                  <sly data-sly-call="${ tpl.module @ data=item.image }"></sly>
+                </sly>
               </div>
             </div>
         </div>
