--- a/eaton.frontend/src/global/css/base/elements/_rich-text.scss
+++ b/eaton.frontend/src/global/css/base/elements/_rich-text.scss
@@ -19,7 +19,7 @@
   // wysiwyng classes
   span.b-eyebrow-large {
     padding-bottom: 20px;
-    display: inline-block;
+    display: block;
     top: -5px;
     position: relative;
   }
@@ -47,8 +47,9 @@
 
   p {
     font-family: Arial, sans-serif;
-    font-size: 2.4rem;
-    line-height: 3.8rem;
+    // font-size: 2.4rem;
+    // line-height: 3.8rem;
+    @include body-copy;
   }
 
 
@@ -116,6 +117,10 @@
     }
 
 
+  }
+
+  @include media-mobile-and-tablet {
+    @include body-copy-small;
   }
 }
 
