--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/link-list/css/link-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/link-list/css/link-list.css
@@ -53,7 +53,9 @@
 
 .dark-theme .eaton-link-list-vertical__download-text { font-size: 1.6rem; }
 
-@media screen and (max-width: 991px) { .eaton-link-list-vertical__eyebrow { margin-bottom: 20px; } }
+@media screen and (max-width: 991px) { .eaton-link-list-vertical__external-icon { font-size: 2rem; margin-top: 3px; }
+  .eaton-link-list-vertical__download-text { margin-left: 30px; }
+  .eaton-link-list-vertical__eyebrow { margin-bottom: 20px; } }
 
 @media screen and (min-width: 992px) { .eaton-link-list-vertical__eyebrow { margin-bottom: 15px; }
   .eaton-link-list-vertical__download-text { width: auto; } }
